01-enterprise-web-platform/aws/ec2-web-server.tf
# AWS Enterprise Web EC2 example
resource "aws_security_group" "web" {
  name        = "enterprise-web-sg"
  description = "Allow HTTP and HTTPS"
  vpc_id      = var.vpc_id
  ingress { from_port = 80 to_port = 80 protocol = "tcp" cidr_blocks = ["0.0.0.0/0"] }
  ingress { from_port = 443 to_port = 443 protocol = "tcp" cidr_blocks = ["0.0.0.0/0"] }
  egress { from_port = 0 to_port = 0 protocol = "-1" cidr_blocks = ["0.0.0.0/0"] }
}
